Enable AoT compilation

--- a/src/app/task-item-create/task-item-create.component.html
+++ b/src/app/task-item-create/task-item-create.component.html
@@ -7,7 +7,7 @@
         mdInput
         placeholder="What task do you need to complete?"
         [(ngModel)]="editText"
-        (keyup.enter)="submit($event)"
+        (keyup.enter)="submit()"
         (keyup.escape)="cancel()">
     </md-input-container>
   </div>
