--- a/src/app/tasks/task-item.component.html
+++ b/src/app/tasks/task-item.component.html
@@ -1,7 +1,7 @@
 <md-list-item>
-  <md-checkbox class="task-item__checkbox" md-list-icon [checked]="task.attributes.completed" (change)="toggle.emit()"></md-checkbox>
+  <md-checkbox class="task-item__checkbox" md-list-icon [checked]="task.attributes.isCompleted" (change)="toggle.emit()"></md-checkbox>
   <div md-line>
-    <div class="task-item__name" (click)="edit()">{{task.attributes.title}}</div>
+    <div class="task-item__title" (click)="edit()">{{task.attributes.title}}</div>
     <md-input-container class="task-item__input">
       <input
         #input
@@ -12,6 +12,6 @@
         (keyup.escape)="cancel()">
     </md-input-container>
   </div>
-  <button class="task-item__remove" md-icon-button (click)="destroy.emit()"><md-icon>delete</md-icon></button>
+  <button class="task-item__destroy" md-icon-button (click)="destroy.emit()"><md-icon>delete</md-icon></button>
 </md-list-item>
 <md-divider></md-divider>
